[+] Finish game logic