@@ -2,9 +2,8 @@ package be.ketsu.bingo.configuration.files;
 
 import be.ketsu.bingo.configuration.annotation.Configuration;
 import lombok.Data;
-import org.bukkit.Material;
-import org.bukkit.inventory.ItemStack;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Data
@@ -23,11 +22,6 @@ public class SettingsConfiguration {
      */
     String gameGlobalPermission = "bingo.*";
     Integer lineToComplete = 12;
-    List<ItemStack> banItemStack = List.of(new ItemStack(Material.GLASS));
+    List<String> banItemStack = Arrays.asList("GLASS");
 
-    /*
-    Menu settings
-     */
-    Integer gui_row = 5;
-    Integer gui_column = 5;
 }
